resources/gitops-config/operators/authentik/templates/authentik-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: authentik-httproute
  namespace: authentik
spec:
  parentRefs:
    - name: svc-gateway
      namespace: kube-system
      sectionName: svc-https-listener
  hostnames:
    - sso.svc.damman.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
